Stop using pinch genture center to move camera.

--- a/Godspeed.CommonProject/Godspeed.CommonProject.csproj
+++ b/Godspeed.CommonProject/Godspeed.CommonProject.csproj
@@ -45,8 +45,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cooldown.cs" />
     <Compile Include="Core\Inputs\GestureHelper.cs" />
     <Compile Include="Core\UpdateHandlers\LimitPositionByBoundsExtension.cs" />
+    <Compile Include="PencilAreaCalculator.cs" />
     <Compile Include="Utils\Extensions\Vector2Extensions.cs" />
     <Compile Include="Core\GameObject.cs" />
     <Compile Include="Utils\Maybe.cs" />
