--- a/Godspeed.CommonProject.Tests/Godspeed.CommonProject.Tests.csproj
+++ b/Godspeed.CommonProject.Tests/Godspeed.CommonProject.Tests.csproj
@@ -63,6 +63,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DrawingAndCamereMovementControllerTests.cs" />
+    <Compile Include="PointToArrayIndexExtensionsTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
