--- a/Godspeed.AndroidProject/Properties/AndroidManifest.xml
+++ b/Godspeed.AndroidProject/Properties/AndroidManifest.xml
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="Godspeed.AndroidProject" android:versionCode="1" android:versionName="1.0">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="Godspeed.AndroidProject" android:versionCode="1" android:versionName="1.0" android:installLocation="auto">
 	<uses-sdk />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<application android:label="Godspeed.AndroidProject" android:icon="@drawable/Icon"></application>
 </manifest>
