--- a/Godspeed.AndroidProject/Godspeed.AndroidProject.csproj
+++ b/Godspeed.AndroidProject/Godspeed.AndroidProject.csproj
@@ -19,10 +19,9 @@
     <AndroidSupportedAbis>armeabi-v7a%3bx86</AndroidSupportedAbis>
     <AndroidStoreUncompressedFileExtensions>.m4a</AndroidStoreUncompressedFileExtensions>
     <MandroidI18n />
-    <TargetFrameworkVersion>v6.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v9.0</TargetFrameworkVersion>
     <MonoGamePlatform>Android</MonoGamePlatform>
     <AndroidManifest>Properties\AndroidManifest.xml</AndroidManifest>
-    <AndroidUseLatestPlatformSdk>True</AndroidUseLatestPlatformSdk>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -66,7 +65,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <MonoGameContentReference Include="..\SharedProject\Content\ContentAndroid.mgcb">
+    <MonoGameContentReference Include="..\Godspeed.CommonProject\Content\ContentAndroid.mgcb">
       <Link>Content\ContentAndroid.mgcb</Link>
     </MonoGameContentReference>
     <None Include="Resources\AboutResources.txt" />
