--- a/Godspeed.Desktop/Godspeed.Desktop.csproj
+++ b/Godspeed.Desktop/Godspeed.Desktop.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="MonoGame.Framework.DesktopGL.Core" Version="3.8.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Monogame.Common\Monogame.Common.csproj" />
+  </ItemGroup>
+
 </Project>
