Including android project

--- a/AnimationTool.Desktop/AnimationTool.Desktop.fsproj
+++ b/AnimationTool.Desktop/AnimationTool.Desktop.fsproj
@@ -1,25 +1,26 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
     <OutputType>WinExe</OutputType>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="..\AnimationTool.Common\Content\ContentDesktop.mgcb" Link="Content\ContentDesktop.mgcb" />
+    <MonoGameContentReference Include="..\AnimationTool.Common\Content\ContentDesktop.mgcb" Link="Content\ContentDesktop.mgcb" />
     <Compile Include="Program.fs" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.0.1641" />
-    <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.0.1641" />
-    <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Content\" />
   </ItemGroup>
 
-  <ItemGroup />
+  <ItemGroup>
+    <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.0.1641" />
+    <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.0.1641" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AnimationTool.Common\AnimationTool.Common.fsproj" />
+  </ItemGroup>
 
 </Project>
