--- a/AnimationTool.Android/packages.config
+++ b/AnimationTool.Android/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="FSharp.Core" version="4.7.2" targetFramework="monoandroid90" />
   <package id="MonoGame.Framework.Android" version="3.8.0.1641" targetFramework="monoandroid90" />
+  <package id="SkiaSharp" version="2.80.2" targetFramework="monoandroid90" />
 </packages>
