--- a/AnimationTool.Common/AnimationTool.Common.fsproj
+++ b/AnimationTool.Common/AnimationTool.Common.fsproj
@@ -14,6 +14,7 @@
     <Compile Include="InputModule.fs" />
     <Compile Include="PointUtils.fs" />
     <Compile Include="TextureIO.fs" />
+    <Compile Include="SaveModule.fs" />
     <Compile Include="PaintModule.fs" />
     <Compile Include="PencilPreview.fs" />
     <Compile Include="MyGame.fs" />
@@ -21,7 +22,7 @@
 
   <ItemGroup>
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.0.1641" />
-    <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
+    <PackageReference Include="SkiaSharp" Version="2.80.2" />
   </ItemGroup>
 
 </Project>
